[package]
name = "iso-tp"
version = "0.1.0-alpha.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Async ISO-TP (ISO 15765-2) implementation for embedded devices"
repository = "https://github.com/matthunz/async-hal"

[features]
socket = ["async-hal", "futures"]
full = ["socket"]

[dependencies]
async-hal =  { version = "0.1.0-alpha.8", optional = true }
futures = { version = "0.3.28", no-default-features = true, optional = true }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "socket"
required-features = ["socket"]
