[package]
name = "iso-tp"
version = "0.1.0-alpha.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Async ISO-TP (ISO 15765-2) implementation for embedded devices"
repository = "https://github.com/matthunz/iso-tp"

[features]
socket = ["async-hal", "embedded-hal", "futures", "pin-project-lite"]
transport = ["async-hal", "futures"]
full = ["socket", "transport"]

[dependencies]
async-hal =  { version = "0.1.0-alpha.8", optional = true }
embedded-hal = { version = "0.2.7", optional = true }
futures = { version = "0.3.28", no-default-features = true, optional = true }
pin-project-lite = { version = "0.2.9", optional = true }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
